v1.0 Start code upgrade
- Delete all Command classes for one Generic
- Implementation of Lombok
- Primary use of Pattern Matching
- Add custom items to shop
- Change Java version in pom